--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 slides/2022Aug_dao_tao_noi_bo_vietinbank.pptx
 slides/~$2022Aug_dao_tao_noi_bo_vietinbank.pptx
 slides/2022Aug_serving_model.pptx
+slides/ignore_eda_fe_dao_tao_noi_bo_vietinbank.pptx
+slides/ignore_serving_mlops_architecture.pptx
